# websocket

./: .clang-format  .gitignore  LICENSE  README.md  build.sh  format.sh  meson.build  valgrind-out.txt  valgrind.txt
include/: #main.h#  main.h  utils.h
scripts/: format.py
src/: #client.c#  .#client.c  client.c  listener.c  main.c  server.c  utils.c
